--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wFjrJPFHJHiw0BNgr5W94/FyUcSeC3NJOq4znVAj1tQ=
+APP_KEY=base64:8OYsQf+fI9CfCg/bBk7mgXeiJs92pnqOn61MLB56KPE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -36,8 +36,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=sendmail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=example@gmail.com
-MAIL_PASSWORD=password
+MAIL_USERNAME=chanheinkyaw.mm@gmail.com
+MAIL_PASSWORD=chanheinkyaw241806@@
 MAIL_ENCRYPTION=tls
 
 AWS_SECRET_ACCESS_KEY=
