--- a/.env.example
+++ b/.env.example
@@ -36,8 +36,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=sendmail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=chanheinkyaw.mm@gmail.com
-MAIL_PASSWORD=chanheinkyaw241806@@
+MAIL_USERNAME=example@gmail.com
+MAIL_PASSWORD=password
 MAIL_ENCRYPTION=tls
 
 AWS_SECRET_ACCESS_KEY=
